chore: fix footer on mobile

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -7,7 +7,6 @@
 
 body {
     overflow-wrap: break-word !important;
-    width: 90% !important;
 }
 
 code {
