--- a/src/assets/css/tufte.css
+++ b/src/assets/css/tufte.css
@@ -483,4 +483,8 @@ label.margin-toggle:not(.sidenote-number) {
     img {
         width: 100%;
     }
+
+    h1 {
+        font-size: 2.5rem;
+    }
 }
